--- a/memogame.html
+++ b/memogame.html
@@ -28,6 +28,6 @@
   <br>
   <button type="button" onclick="getAns()" id="hint" disabled>Show hint</button>
   <p id="te"></p>
-  <script src="script.js"></script>
+  <script src="memoscript.js"></script>
 </body>
 </html>
