--- a/tetris.html
+++ b/tetris.html
@@ -21,6 +21,6 @@
   <text id="tScore" x="360" y="60" fill="black">Score: </text> 
   </svg>
 
-  <script src="script.js"></script>
+  <script src="tetris.js"></script>
 </body>
 </html>
