--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
       </ul>
     </form>
   </div>
-  
+  <div>
+	  <h1>Games</h1>
+	  <a href="imjustwtknowit.github.io/memogame.html">Memory Game</a>
+	  <a href="imjustwtknowit.github.io/tetris.html">Tetris</a>
+  </div>
+</body>
 
   <script src="script.js"></script>
 </body>
