--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
   </div>
   <div>
 	  <h1>Games</h1>
-	  <a href="imjustwtknowit.github.io/memogame.html">Memory Game</a>
-	  <a href="imjustwtknowit.github.io/tetris.html">Tetris</a>
+	  <a href="memogame.html" target="_blank">Memory Game</a>
+	  <br>
+	  <a href="tetris.html" target="_blank">Tetris</a>
   </div>
 </body>
 
