--- a/minesweeper.html
+++ b/minesweeper.html
@@ -26,6 +26,6 @@
   <text id="fC" x="25" y="40" fill="black" font-size="15">count: </text>
   </svg>
 
-  <script src="script.js"></script>
+  <script src="minesweeper.js"></script>
 </body>
 </html>
