--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
   </div>
   <div>
 	  <h1>Games</h1>
-	  <a href="memogame.html" target="_blank">Memory Game</a>
-	  <br>
-	  <a href="tetris.html" target="_blank">Tetris</a>
+	  <a href="memogame.html" target="_blank">Memory Game</a><br>
+	  <a href="tetris.html" target="_blank">Tetris</a><br>
+	  <a href="minesweeper.html" target="_blank">Minesweeper</a>
   </div>
 </body>
 
