--- a/minesweeper.html
+++ b/minesweeper.html
@@ -13,6 +13,7 @@
   <br>
   <button type="button" id="startBut" onclick="newGame()">New Game</button>
   <button type="button" id="solveBut" onclick="solveGame()" disabled>Solve Game</button>
+  <button type="button" id="changeBut" onclick="changeType()">Open</button>
   <br>
   <br>
   <svg id="svgT" version="1.1"
