--- a/tetris.html
+++ b/tetris.html
@@ -20,6 +20,12 @@
   <text id="tInfo" x="360" y="40" fill="black"></text> 
   <text id="tScore" x="360" y="60" fill="black">Score: </text> 
   </svg>
+  <br>
+  <br>
+  <button class="navtetris" onclick="toLeft()">Left</button>
+  <button class="navtetris" onclick="toDrop()">Drop</button>
+  <button class="navtetris" onclick="toRight()">Right</button>
+  <button class="navtetris" onclick="toRotate()">Rotate</button>
 
   <script src="tetris.js"></script>
 </body>
