--- a/colorguess.html
+++ b/colorguess.html
@@ -22,6 +22,6 @@
   <svg id="svgT" version="1.1" width="500" height="500" xmlns="http://www.w3.org/2000/svg">
     <rect id="r0" x="0" y="0" width="500" height="500" stroke="black" fill="transparent"></rect>
   </svg>
-  <script src="script.js"></script>
+  <script src="colorguess.js"></script>
 </body>
 </html>
