--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 	  <h1>Games</h1>
 	  <a href="memogame.html" target="_blank">Memory Game</a><br>
 	  <a href="tetris.html" target="_blank">Tetris</a><br>
-	  <a href="minesweeper.html" target="_blank">Minesweeper</a>
+	  <a href="minesweeper.html" target="_blank">Minesweeper</a><br>
+	  <a href="colorguess.html" target="_blank">Color Guess</a>
   </div>
 </body>
 
