--- a/colorguess.html
+++ b/colorguess.html
@@ -18,6 +18,7 @@
    </p>
   <br>
   <button type="button" id="stBut" onclick="restartGame()">New Game!</button>
+  <button type="button onclick="solveGame()">Solve Game</button>
   <p id="tText"></p>
   <svg id="svgT" version="1.1" width="500" height="500" xmlns="http://www.w3.org/2000/svg">
     <rect id="r0" x="0" y="0" width="500" height="500" stroke="black" fill="transparent"></rect>
